<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_address"
                tools:layout_editor_absoluteX="560dp">

                <EditText
                    android:id="@+id/serverNameTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/server_address"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_user"
                tools:layout_editor_absoluteX="560dp">

                <EditText
                    android:id="@+id/serverUserTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/server_user"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_pass"
                tools:layout_editor_absoluteX="560dp">

                <EditText
                    android:id="@+id/serverPassTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/server_pass"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_domain"
                tools:layout_editor_absoluteX="560dp">

                <EditText
                    android:id="@+id/serverDomainTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/server_domain"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_share"
                tools:layout_editor_absoluteX="560dp">

                <EditText
                    android:id="@+id/serverShareTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/server_share"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/img_path"
                tools:layout_editor_absoluteX="560dp">

                <EditText
                    android:id="@+id/serverPathTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/img_path"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/show_delay"
                tools:layout_editor_absoluteX="560dp">

                <EditText
                    android:id="@+id/showDelayTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/show_delay"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/showFilenameCheckBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/show_filename"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/showClockCheckBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/show_clock"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/clock_format"
                tools:layout_editor_absoluteX="560dp">

                <EditText
                    android:id="@+id/clockFormatTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/clock_format"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/stretchImageCheckBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/stretch_image"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>